# ss

./: .gitignore  CMakeLists.txt  FindSDL2.cmake  README.md
data/: config.txt
data/shaders/: standardColor.pgm  standardColor.vert  standardTexture.frag  standardTexture.pgm  standardTexture.vert
include/cellular_automata/: Cell.hpp
include/core/: Color.hpp  GLCore.hpp  level.hpp
include/levels/: DemoLevel.hpp  Level.hpp  LevelList.hpp
include/main/: ForwardDeclarations.hpp  Main.hpp
include/math/: Quaternionf.hpp  Util.hpp  Vector3f.hpp
include/port/: FileSystem.hpp
include/resources/: Shader.hpp  ShaderManager.hpp  ShaderProgram.hpp  Texture.hpp  TgaHeader.hpp  TgaLoader.hpp
include/util/: Config.hpp  HashTypes.hpp  Log.hpp  Parsing.hpp  StringLib.hpp  Trikey.hpp
src/cellular_automata/: Cell.cpp
src/core/: Color.cpp  GLCore.cpp
src/levels/: DemoLevel.cpp  Level.cpp
src/main/: Main.cpp
src/math/: Quaternionf.cpp  Vector3f.cpp
src/resources/: Shader.cpp  ShaderManager.cpp  ShaderProgram.cpp  Texture.cpp  TgaHeader.cpp  TgaLoader.cpp
src/util/: Config.cpp  Log.cpp  Parsing.cpp  StringLib.cpp  Trikey.cpp
